# napi

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  shell.nix
.github/workflows/: CI.yml
benchmark/: glob_bench.js  index.js
benchmark/results/: glob_result.chart.html  glob_result.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
