[package]
edition = "2021"
name = "globby"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
futures = "0.3"
napi = { version = "2.1.0", default-features = true, features = [ "napi4", "tokio_rt", "tokio_fs" ] }
napi-derive = "2.1.0"
glob = "0.3.0"
globset = "0.4.8"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
